--- a/style.css
+++ b/style.css
@@ -1,183 +1,222 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-  background-color: #181818;
-  color: white;
-  font-size: 16px;
+* {
+	margin: 0;
+	padding: 0;
+	--margin: 40px;
+	--border-radius: 20px;
 }
 
-body::-webkit-scrollbar {
-  width: 8px; /* Width of the entire scrollbar */
-}
-
-body::-webkit-scrollbar-track {
-  background: #2c2c2c; /* Color of the tracking area */
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #9f9f9f; /* Color of the scroll thumb */
-  border-radius: 4px; /* Roundness of the scroll thumb */
-  border: none;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background-color: #d1d1d1; /* Color of the scroll thumb on hover */
-}
-
-.settings-container {
-  width: 500px;
-  margin: 50px auto;
-  padding: 20px;
-  /* border: 1px solid #ddd; */
-  border-radius: 5px;
-}
-
-.settings-container h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.setting-group {
-  margin-bottom: 20px;
-  /* border: 1px solid #ddd; */
-  padding: 15px;
-  border-radius: 5px;
-}
-
-.setting-group h2 {
-  font-size: 0.9em;
-  font-weight: 500;
-  color: #93cdfd;
-  margin-top: 0;
-  margin-bottom: 15px;
-}
-
-.setting-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
-  /* border-bottom: 1px solid #eee; */
-}
-
-.setting-item:last-child {
-  border-bottom: none;
-}
-
-.setting-item label {
-  font-weight: 500;
-  margin-bottom: 5px;
-  display: block;
-}
-
-.setting-item p {
-  font-size: 0.9em;
-  font-weight: 300;
-  /* color: #666; */
-  opacity: 0.6;
-  margin-bottom: 0;
-}
-
-.setting-item-content {
-  display: flex;
-  align-items: center;
-}
-
-.setting-item-content input[type="text"],
-.setting-item-content select,
-.setting-item-content input[type="number"] {
-  width: auto;
-  padding: 5px;
-  
-	margin: 10px 0px;
-	padding: 10px 10px;
-	background-color: #ffffff05;
-	border-width: 0px;
+html {
+	width: 100vw;
+	height: 100vh;
+	scroll-behavior: smooth;
+	background: rgba(0, 0, 0, 0.884);
+	font-size: 30px;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 	color: white;
-  border-radius: 0.5em;
+	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+	overflow-wrap: break-word;
 }
 
-.setting-item-content option {
-  color: black;
+#statusContainer {
+	font-weight: 500;
+	font-size: 30px;
+	text-align: center;
+	background-color: #D12025;
+	color: white;
+	padding: 10px;
+	border-radius: 10px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-textarea:focus, input:focus {
-  outline: none;
+#mainContainer {
+	position: absolute;
+	height: calc(100% - 2 * var(--margin));
+	width: calc(100% - 2 * var(--margin));
+	margin: var(--margin);
 }
 
-.setting-item-content input[type="color"] {
-  width: 40px;
-  height: 40px;
-  margin-left: 10px;
-  /* padding: 2px; */
-  /* border: 1px solid #ccc; */
-  /* border-radius: 4px; */
-  
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  background: none;
-  border: 0;
-  cursor: pointer;
-  padding: 0;
+#messageList {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 }
 
-/* Switch styling */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+li {
+	list-style: none;
+	overflow: hidden;
+	height: 0;
+    margin-top: 10px;
 }
 
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
+.slide-fade li {
+	transition: all 0.5s ease-out;
+	opacity: 0;
 }
 
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+.slide-fade li.show {
+	opacity: 1;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+#IPutThisHereSoICanCalculateHowBigEachMessageIsSupposedToBeBeforeIAddItToTheMessageList {
+    margin-top: 10px;
+	opacity: 0;
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+#firstMessage {
+	display: none;
+	font-weight: 500;
+	font-size: 0.7rem;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+.firstMessageHighlight {
+	background: #adadad46;
+	padding: 20px 40px;
+	border-radius: var(--border-radius);
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.avatar {
+	height: 2em;
+	margin: 1px;
+	transform: translate(0px, 0.25em);
+	border-radius: 50%
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
+.timestamp,
+.pronouns {
+	background: #adadad46;
+	border-radius: var(--border-radius);
+	font-size: 0.7rem;
+	padding: 5px 15px;
 }
 
-.slider.round:before {
-  border-radius: 50%;
+.platform,
+.badge,
+.emote {
+	height: 1em;
+	margin: 1px;
+	transform: translate(0px, 0.25em);
+}
+
+#badgeList {
+	margin: 0px 5px;
+}
+
+#username,
+#title {
+	font-weight: 700;
+}
+
+.title {
+	font-weight: 700;
+}
+
+#reply {
+	display: none;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	font-size: 0.7rem;
+	opacity: 0.5;
+}
+
+#message {
+	font-weight: 400;
+	line-height: 1.7em;
+}
+
+#card {
+	background: #adadad46;
+	padding: 20px 40px;
+	border-radius: var(--border-radius);
+}
+
+#youtubeSuperSticker {
+	display: block;
+}
+
+#sticker-img {
+	height: 5em;
+}
+
+#stickerLabel {
+	text-align: center;
+	font-weight: 700;
+}
+
+/*****************/
+/** CARD COLORS **/
+/*****************/
+
+.announcementBlue {
+	background: linear-gradient(#03d3d7BF, #8d49feBF) !important;
+}
+
+.announcementGreen {
+	background: linear-gradient(#01da86BF, #55bee4BF) !important;
+}
+
+.announcementOrange {
+	background: linear-gradient(#feb419BF, #e1df00BF) !important;
+}
+
+.announcementPurple {
+	background: linear-gradient(#9548ffBF, #fc74e6BF) !important;
+}
+
+.twitch {
+	background: linear-gradient(#6d5ca1bf, #9146ffBF) !important;
+}
+
+.youtube {
+	background: linear-gradient(#FF6C60BF, #FF0707BF) !important;
+}
+
+.streamlabs {
+	background: linear-gradient(#73dabbbf, #397765bf) !important;
+}
+
+.streamelements {
+	background: linear-gradient(#263b8abf, #0a112abf) !important;
+}
+
+/****************/
+/** ANIMATIONS **/
+/****************/
+
+.statusConnected {
+	animation-name: statusConnected;
+	animation-duration: 2s;
+	animation-fill-mode: forwards;
+}
+
+.statusDisconnected {
+	animation-name: statusDisconnected;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes statusConnected {
+	0% {
+		opacity: 1;
+		background-color: #2FB774;
+	}
+
+	100% {
+		opacity: 0;
+		background-color: #2FB774;
+	}
+}
+
+@keyframes statusDisconnected {
+	0% {
+		background-color: #D12025;
+	}
+
+	100% {
+		background-color: #D12025;
+	}
 }
