--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ li {
 	overflow: hidden;
 	height: 0;
     margin-top: 10px;
+	transition: all 1s ease-in-out;
 }
 
 .slide-fade li {
@@ -89,7 +90,7 @@ li {
 .pronouns {
 	background: #adadad46;
 	border-radius: var(--border-radius);
-	font-size: 0.7rem;
+	font-size: 0.7em;
 	padding: 5px 15px;
 }
 
