--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 	width: 100vw;
 	height: 100vh;
 	scroll-behavior: smooth;
-	background: rgba(0, 0, 0, 0.884);
+	/* background: #000000d9; */
 	font-size: 30px;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 	color: white;
