--- a/style.css
+++ b/style.css
@@ -40,9 +40,17 @@ html {
 
 #messageList {
 	position: absolute;
-	bottom: 0;
 	left: 0;
 	width: 100%;
+}
+
+.normalScrollDirection {
+	bottom: 0;
+}
+.reverseScrollDirection {
+	display: flex;
+	top: 0;
+	flex-direction: column-reverse;
 }
 
 li {
@@ -51,6 +59,11 @@ li {
 	height: 0;
     margin-top: 10px;
 	transition: all 1s ease-in-out;
+}
+.reverseLineItemDirection {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 .slide-fade li {
